<resources>
    <string name="app_name">MoviesApp</string>
    <string name="menu_title_query_popular">Sort movies by popularity</string>
    <string name="menu_title_query_rated">Sort movies by ratings</string>
    <string name="dialog_error_message">We weren\'t able to retrieve data from The Movie Data Base. Please check your internet connection and try again later.</string>
    <string name="dialog_error_title">Error while getting data</string>
    <string name="dialog_try_again">Try again</string>
    <string name="text_description">Movie description:</string>
    <string name="vote_avarage">Vote avarage: %1$s</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="menu_title_favorite">Mark as Favorite</string>
    <string name="key_movie">movieId</string>
    <string name="movie_detail_marked_favorite">You\'ve marked this movie as a favorite!</string>
    <string name="movie_detail_unmarked_favorite">You\'ve unmarked this movie as a favorite!</string>
    <string name="menu_title_favorites">Show favorites</string>
    <string name="detail_activty">Movie Details</string>
    <string name="review_activty">Reviews</string>
    <string name="key_movie_id">movieId</string>
    <string name="key_movie_title">movieTitle</string>
    <string name="review_author">Author: %1$s</string>
    <string name="key_current_query">currentQuery</string>
    <string name="no_fav_movies">You haven\'t picked any movie as a favorite yet!</string>
    <string name="toast_message_connectivity">You need a valid internet connection for this functionality!</string>
    <string name="movie_title_default">Movie title</string>
    <string name="movie_ratings_default">Ratings</string>
    <string name="movie_release_default">Release</string>
    <string name="button_trailers_reviews">Check out the trailers and reviews here!</string>
    <string name="trailer_text">Trailer #%1$s  (%2$s)</string>
    <string name="key_scroll_position">recyclerViewScrollPosition</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews found</string>
    <string name="no_trailers">No trailers found</string>
    <string name="toast_message_app_not_installed">youtube app not installed</string>
</resources>
