<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_trailers"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/LinearLayoutTrailerReview">

                <TextView
                    android:id="@+id/tv_trailers_title"
                    style="@style/RecyclerViewTitle"
                    android:text="@string/trailers" />

                <View style="@style/Divider" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/tv_no_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/half_spacing"
                    android:text="@string/no_trailers"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/half_spacing" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_reviews"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_trailers"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/LinearLayoutTrailerReview">

                <TextView
                    android:id="@+id/tv_review_title"
                    style="@style/RecyclerViewTitle"
                    android:text="@string/reviews" />

                <View style="@style/Divider" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/tv_no_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/half_spacing"
                    android:text="@string/no_reviews"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/half_spacing" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

</RelativeLayout>
