<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmovies.activities.TrailerAndReviewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ll_buttons_holder">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_trailers"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/LinearLayoutTrailerReview">

                <TextView
                    android:id="@+id/tv_trailers_title"
                    style="@style/RecyclerViewTitle"
                    android:text="@string/trailers" />

                <View style="@style/Divider" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/tv_no_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_trailers"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_reviews"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            card_view:cardCornerRadius="4dp">

            <LinearLayout style="@style/LinearLayoutTrailerReview">

                <TextView
                    android:id="@+id/tv_review_title"
                    style="@style/RecyclerViewTitle"
                    android:text="@string/reviews" />

                <View style="@style/Divider" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/tv_no_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_reviews"
                    android:visibility="gone" />


            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="@style/ProgressBar" />

    <LinearLayout
        android:id="@+id/ll_buttons_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/bt_show_trailers"
            style="@style/TrailerReviewButton"
            android:text="@string/trailers" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_show_reviews"
            style="@style/TrailerReviewButton"
            android:text="@string/reviews" />

    </LinearLayout>

</RelativeLayout>
